add login and signup router

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,14 +1,18 @@
 {{define "index"}}
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Top page</title>
+    <title>Top</title>
 </head>
+
 <body>
-    
+    <a href="/login">Login</a>
+    <a href="/signup">Signup</a>
 </body>
+
 </html>
 {{end}}
