--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -17,7 +17,7 @@
         <input type="text" name="name" id="name">
         <label for="pass">pass:</label>
         <input type="password" name="pass" id="pass">
-        <input type="submit" value="login">
+        <input type="submit" value="signup">
     </form>
 </body>
 
