--- a/public/views/bbs.html
+++ b/public/views/bbs.html
@@ -11,6 +11,11 @@
 
 <body>
     {{.}}
+    <form action="/post" method="post">
+        <label for="content">content:</label>
+        <input type="text" name="content" id="content">
+        <input type="submit" value="submit">
+    </form>
 </body>
 
 </html>
